hphp/hack/test/typecheck/like_types/simple_pessimization/decl_types/tany.php.exp
File "tany.php", line 5, characters 3-13:
  _
File "tany.php", line 4, characters 23-24:
Was expecting a type hint (Typing[4032])
