hphp/hack/test/typecheck/like_types/simple_pessimization/decl_types/tany.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function f(/* TAny */ $x): void {
  hh_show($x);
}
